# aws-bootcamp-cruddur

./: .gitpod.yml  .pre-commit-config.yaml  docker-compose.yaml  openapi-3.0.yml  pyproject.toml
backend-flask/: Dockerfile  main.py  poetry.toml  pyproject.toml
backend-flask/services/: create_activity.py  create_message.py  create_reply.py  home_activities.py  message_groups.py  messages.py  notifications_activities.py  search_activities.py  show_activity.py  user_activities.py
frontend-react-js/: Dockerfile
journal/: week0.md
