[tool.poetry]
name = "aws-bootcamp-cruddur"
version = "0.1.0"
description = ""
authors = ["Sirish Kumar bethala <sirishkumar@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_bootcamp_cruddur"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.249"
pre-commit = "^3.0.4"

[tool.ruff]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
